fix h5 link wrap

--- a/app/scss/sections.scss
+++ b/app/scss/sections.scss
@@ -93,8 +93,8 @@ main {
       font-size: 20px;
     }
     h5 {
-      padding: 5px 10px;
-      font-size: 15px;
+      padding: 8px 10px;
+      font-size: 12px;
       background: $b-color;
     }
   }
